# auto_takeoff

./: CMakeLists.txt  package.xml
launch/: erlecopter_with_wind_gust.launch  spawn_erlecopter.launch
msg/: WindGust.msg
src/: auto_takeoff_and_loiter.cpp  gazebo_wind_plugin.cpp  gazebo_wind_plugin.h  main.cpp.bak  test_plugin.cpp  test_plugin.h  wind_broadcaster.cpp
urdf/: component_snippets.xacro  erlecopter.xacro  erlecopter_base.xacro  erlecopter_with_wind_gust.xacro  test.xacro
