<?xml version="1.0"?>
<package>
	<name>auto_takeoff</name>
	<version>0.0.0</version>
	<description>The auto_takeoff package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="woshigeshabiaaa@sina.com">flyinsky</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but mutiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/ros_erle_takeoff_land</url> -->


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!--   <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!--   <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!--   <run_depend>message_runtime</run_depend> -->
	<!-- Use test_depend for packages you need only for testing: -->
	<!--   <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Dependencies needed to compile this package. -->
	<build_depend>gazebo</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rosbag</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>rotors_model</build_depend>
	<build_depend>rotors_control</build_depend>
	<build_depend>mavros</build_depend>
	<build_depend>mav_msgs</build_depend>
	<build_depend>octomap_ros</build_depend>
	<build_depend>octomap</build_depend>
	<build_depend>octomap_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>planning_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>glog_catkin</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<!-- Dependencies needed after this package is compiled. -->
	<run_depend>gazebo_ros</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rosbag</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>rotors_model</run_depend>
	<run_depend>rotors_control</run_depend>
	<run_depend>mavros</run_depend>
	<run_depend>mav_msgs</run_depend>
	<run_depend>octomap_ros</run_depend>
	<run_depend>octomap</run_depend>
	<run_depend>octomap_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>planning_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>glog_catkin</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- You can specify that this package is a metapackage here: -->
		<!-- <metapackage/> -->

		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
